--- a/数据/计算属性2.html
+++ b/数据/计算属性2.html
@@ -12,9 +12,9 @@
         -->
         <ul id="ul_1" >
             <li>这个是原始值mes：{{mes}}</li>
-            <li>这个是根据原始值计算的属性（会缓存）：{{reverseMes2}}</li>
-            <li>这个是采用调用方法计算的值（不缓存）：{{ reverseMes()}}</li>
-            <li>每当触发重新渲染时，调用方法将总会再次执行函数，不缓存</li>
+            <li>这个是根据原始值计算的属性 ：{{reverseMes2}}</li>
+            <li>这个是采用调用方法计算的值 ：{{ reverseMes()}}</li>
+
         </ul>
     </div>
 
