--- a/选项-数据/计算属性2.html
+++ b/选项-数据/计算属性2.html
@@ -35,7 +35,7 @@
         },
         computed:{
             reverseMes2:function(){
-                // this 指向 app 实例,注意：如果下方methods中方法与此处同名，此处不会取计算值
+                // this 指向 app 实例,注意：如果 methods中方法与此处同名，此处不会取计算值
                 return this.mes.split('').reverse().join('');
             },
             // 仅读取
