--- a/模板语法4/指令5.html
+++ b/模板语法4/指令5.html
@@ -20,10 +20,11 @@
     </div>
 
 <!--
-     添加一个具有唯一值的 key 属性,不复用已有元素
+     添加一个具有唯一值的 key 属性,不复用已有元素(如下例中 input不复用)
     <label> 元素仍然会被高效地复用，因为它们没有添加 key 属性。
     -->
     <div id="app3">
+
         <template v-if="loginType === 'username'">
             <label>Username</label>
             <input placeholder="Enter your username" key="username-input">
