--- a/模板语法4/插值2.html
+++ b/模板语法4/插值2.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div id="app">
-        <span >Message: {{ msg }}</span> <br>
-        <span v-text="msg">v-text-Message: </span><br>
-        <span v-html="msg">v-html-Message: </span>
+        <span >Message--{{ }} 形式绑定: {{ msg }}</span> <br>
+        <label >v-text 形式绑定:</label><span v-text="msg">v-text-Message: </span><br>
+        <label >v-html 形式绑定:</label><span v-html="msg">v-html-Message: </span>
     </div>
 
 <!--
