Add trans value

--- a/mvvm和mvp/mvvmTodo局部组件.html
+++ b/mvvm和mvp/mvvmTodo局部组件.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 MVVM 形式的todoList
-采用 vue全局组件实现：
+采用 vue局部组件实现：
 <div id="app">
     <input type="text" v-model="todoItem">
     <button @click="addItem">添加</button>
