--- a/选项-数据/计算属性2.html
+++ b/选项-数据/计算属性2.html
@@ -12,8 +12,8 @@
         -->
         <ul id="ul_1" >
             <li>这个是原始值mes：{{mes}}</li>
-            <li>这个是根据原始值计算的属性 ：{{reverseMes2}}</li>
-            <li>这个是采用调用方法计算的值 ：{{ reverseMes()}}</li>
+            <li>这个是根据原始值计算的属性reverseMes2 ：{{reverseMes2}}</li>
+            <li>这个是采用调用方法reverseMes()计算的值 ：{{ reverseMes()}}</li>
 
         </ul>
     </div>
