--- a/组件基础/组件2.html
+++ b/组件基础/组件2.html
@@ -7,45 +7,29 @@
 </head>
 <body>
 <div id="app">
-    <button-counter></button-counter>
-    <button-counter></button-counter>
+    <custom-input v-model="searchText"></custom-input>
+    <p>searchText:{{searchText}}</p>
 </div>
-<div id="app2">
-    <button-counter2></button-counter2>
-    <button-counter2></button-counter2>
-</div>
-<script>
-    // 组件
-    Vue.component("button-counter",{
-        data:function(){
-            return {
-                count:0
-            }
-        },
-        template:'<button v-on:click="count++">Clicked {{ count}} times.</button>'
-    });
 
-    // 组件
-    Vue.component("button-counter2",{
-        data:function(){
-            return {
-                count:0
-            }
-        },
-        methods:{
-            handleClick:function(){
-                this.count++;
-            }
-        },
-        template:'<button v-on:click="handleClick">Clicked {{ count}} times.</button>'
-    });
+<script>
+    // 组件中使用 v-model
+    // 组件内的 <input> 必须：
+    // 1.将其 value 特性绑定到一个名叫 value 的 prop 上
+    // 2.在其 input 事件被触发时，将新的值通过自定义的 input 事件抛出
+
+
+    Vue.component('custom-input', {
+        props: ['value'],
+        template: `<input v-bind:value="value" v-on:input="$emit('input', $event.target.value)">`
+    })
 
     var app = new Vue({
-        el:'#app'
+        el:'#app',
+        data:{
+            searchText:""
+        }
     })
-    var app2 = new Vue({
-        el:'#app2'
-    })
+
 </script>
 </body>
 </html>
