--- a/mvvm和mvp/mvvmTodo组件值传递.html
+++ b/mvvm和mvp/mvvmTodo组件值传递.html
@@ -28,7 +28,8 @@ MVVM 形式的todoList
         props:["content","index"],  //注意：这里父组件传递item 、index给子组件属性 content 和 index
         template:"<li @click='handleItemClick'>{{content}}</li>",
         methods:{
-            handleItemClick:function(index){
+            handleItemClick:function(e){
+                console.log(e);// MouseEvent
                 this.$emit("delete",this.index);  //子组件向父组件传递delete事件和值index
             }
         }
