--- a/组件基础/组件4(插槽).html
+++ b/组件基础/组件4(插槽).html
@@ -52,7 +52,7 @@
 
     //组件3----放入到插槽中使用
     Vue.component('font-awesome', {
-        props: ['fontprop'],
+        props: ['fontprop'], // 这里写成 fontProp 错误？
         template: '<h3 > {{fontprop}}</h3> '
     })
 
