--- a/列表渲染/指令7(数组变动).html
+++ b/列表渲染/指令7(数组变动).html
@@ -14,7 +14,7 @@
         这个默认的模式是高效的，但是只适用于不依赖子组件状态或临时 DOM 状态 (例如：表单输入值) 的列表渲染输出。
         为了给 Vue 一个提示，以便它能跟踪每个节点的身份，从而重用和重新排序现有元素，
         需要为每项提供一个唯一 key 属性。理想的 key 值是每项都有的唯一 id
-
+        不要使用对象或数组之类的非原始类型值作为 v-for 的 key。用字符串或数类型的值取而代之。
         -->
         <ul id="ul_1" >
             <li v-for="item in object" :key="item">{{item}}</li>
