--- a/路由/导航路由4.html
+++ b/路由/导航路由4.html
@@ -14,6 +14,8 @@
             <!-- <router-link> 默认会被渲染成一个 `<a>` 标签 -->
             <router-link  to="/user/foo">Go to Foo</router-link>
             <router-link  to="/user/bar">Go to Bar</router-link>
+            <a @click="gotoFoo">Go to Foo</a>
+            <a @click="router.push({ path: '/user/bar' })">Go to Bar</a>
         </p>
         <!-- 路由出口 -->
         <!-- 路由匹配到的组件将渲染在这里 -->
