--- a/Class 与 Style 绑定6/class2.html
+++ b/Class 与 Style 绑定6/class2.html
@@ -23,6 +23,8 @@
             数组语法 1： 数组中变量
             测试发现：如果数组中值为 xxx-xxxxx,必须加引号，否则报错，而此时表明直接绑定为该类名(因为有引号，则表示直接是类名，，而不是vue的data中的值)
             即：数组中值不带引号，表明是变量，其值来自vue的data，而带引号，则表示直接引用该类名
+
+            (active pre-danger text-danger)
             <div v-bind:class="[activeClass,'pre-danger','text-danger']">test</div>
             上面div中 class绑定 变量activeClass、'pre-dangerClass'、'text-danger'
         </ul>
@@ -30,6 +32,7 @@
     <div id="app2">
         <ul>
             //数组语法：数组中使用对象
+            (active pre-dangerClass)
             <div v-bind:class="[{ active: isActive }, errorClass]">test2</div>
 
         </ul>
