--- a/模板语法4/插值2(v-text-html).html
+++ b/模板语法4/插值2(v-text-html).html
@@ -13,9 +13,9 @@
     </div>
 
 <!--
-    Message: <span style='color:red'>红色span</span>
-    <span style='color:red'>红色span</span>
-    红色span
+    Message-- 形式绑定: <span style='color:red'>红色span</span>
+    v-text 形式绑定:<span style='color:red'>红色span</span>
+    v-html 形式绑定:红色span
     -->
 
 </body>
