--- a/组件基础11/组件5(具名插槽).html
+++ b/组件基础11/组件5(具名插槽).html
@@ -75,7 +75,7 @@
                     <slot name="skits"></slot>
                     <li>模板里的化妆品</li>
                     <slot name="makeup"></slot>
-                    <slot>xxxx</slot>
+                    <slot>xxxx 默认的插槽</slot>
                     <slot name="special">插槽special默认内容</slot>
                 </ul>
             </div>
