--- a/组件基础11/组件2(v-model).html
+++ b/组件基础11/组件2(v-model).html
@@ -20,7 +20,10 @@
 
     Vue.component('custom-input', {
         props: ['value'],
-        template: `<input v-bind:value="value" v-on:input="$emit('input', $event.target.value)">`
+        template: `<div>
+                        <input v-bind:value="value" v-on:input="$emit('input', $event.target.value)"><br>
+                        子组件值：<span>{{ value }}</span>
+                    </div>`
     })
 
     var app = new Vue({
