--- a/表单绑定10/双向绑定(v-model)-单选按钮4.html
+++ b/表单绑定10/双向绑定(v-model)-单选按钮4.html
@@ -8,11 +8,12 @@
 <body>
 
     <div id="app">
-        <input type="radio" value="One" id="one" v-model="picked" name="pickRadio" >
+        一组 单选框采用相同 的v-model 名称，则即使它们没有相同的name，也被认为是一组（只能选中一个）
+        <input type="radio" value="One" id="one" v-model="picked"  >
         <label for="one">One</label>
         <br>
         v-model 会忽略所有表单元素的 value、checked、selected 特性的初始值，如下单选框设置checked，但无效：<br>
-        <input type="radio" value="One" id="two" v-model="picked" name="pickRadio" checked>
+        <input type="radio" value="two" id="two" v-model="picked"   checked>
         <label for="two">Two</label>
         <br>
         <span>Picked:{{ picked }}</span>
