--- a/Class 与 Style 绑定6/class2.html
+++ b/Class 与 Style 绑定6/class2.html
@@ -24,9 +24,10 @@
             测试发现：如果数组中值为 xxx-xxxxx,必须加引号，否则报错，而此时表明直接绑定为该类名(因为有引号，则表示直接是类名，，而不是vue的data中的值)
             即：数组中值不带引号，表明是变量，其值来自vue的data，而带引号，则表示直接引用该类名
 
-            (active pre-danger text-danger)
+            
             <div v-bind:class="[activeClass,'pre-danger','text-danger']">test</div>
-            上面div中 class绑定 变量activeClass、'pre-dangerClass'、'text-danger'
+            上面div中 class绑定 变量activeClass(注意是变量）、'pre-dangerClass'、'text-danger'
+			渲染结果：(active pre-danger text-danger)
         </ul>
     </div>
     <div id="app2">
