--- a/组件基础11/组件4(插槽).html
+++ b/组件基础11/组件4(插槽).html
@@ -52,7 +52,7 @@
 
     //组件3----放入到插槽中使用
     Vue.component('font-awesome', {
-        props: ['fontprop'], // 这里写成 fontProp 错误？
+        props: ['fontprop'], // 这里写成 fontProp 错误, 表示绑定的属性为 font-prop
         template: '<h3 > font-awesome: {{fontprop}}</h3> '
     })
 
