--- a/组件基础11/组件开始1-3.html
+++ b/组件基础11/组件开始1-3.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>组件开始</title>
-    <script src ="../vue.js"></script>
+  <meta charset="UTF-8">
+  <title>组件开始</title>
+  <script src="../vue.js"></script>
 </head>
+
 <body>
-<div id="app" :style="{ fontSize: postFontSize + 'em' }">
-// 
-    <blog-post
-  v-for="post in posts"
-  v-bind:key="post.id"
-  v-bind:mes="post"
-  @enlarge-text="onEnlargeText"
-></blog-post>
-</div>
- 
-<script>
+  <div id="app" :style="{ fontSize: postFontSize + 'em' }">
+    //
+    <blog-post v-for="post in posts" v-bind:key="post.id" v-bind:mes="post" @enlarge-text="onEnlargeText"></blog-post>
+  </div>
+
+  <script>
     // 组件
-	Vue.component('blog-post', {
-	  props: ['mes'], // 属性mes接收父组件传递的值
-	  template:`
+    Vue.component('blog-post', {
+      props: ['mes'], // 属性mes接收父组件传递的值
+      template: `
     <div class="blog-post">
       <h3>{{ mes.title }}</h3>
       <button @click="$emit('enlarge-text',0.1)">
@@ -29,28 +26,29 @@
       <div v-html="mes.content"></div>
     </div>
   `
-	})
+    })
 
-    
+
 
     var app = new Vue({
-        el:'#app',
-		data: {
-		postFontSize: 1,
-    posts: [
-      { id: 1, title: 'My journey with Vue' },
-      { id: 2, title: 'Blogging with Vue' },
-      { id: 3, title: 'Why Vue is so fun' }
-    ]
-  },
-  methods: {
-  onEnlargeText: function (enlargeAmount) {
-    this.postFontSize += enlargeAmount
-  }
-}
-		
+      el: '#app',
+      data: {
+        postFontSize: 1,
+        posts: [
+          { id: 1, title: 'My journey with Vue' },
+          { id: 2, title: 'Blogging with Vue' },
+          { id: 3, title: 'Why Vue is so fun' }
+        ]
+      },
+      methods: {
+        onEnlargeText: function (enlargeAmount) {
+          this.postFontSize += enlargeAmount
+        }
+      }
+
     })
- 
-</script>
+
+  </script>
 </body>
+
 </html>
