--- a/8 列表渲染/v-for-template10.html
+++ b/8 列表渲染/v-for-template10.html
@@ -8,6 +8,7 @@
 <body>
 <div id="app">
     <ul>
+        // template 不会渲染出来，好像不存在
         <template v-for="item in items">
             <li>{{ item.msg }}</li>
         </template>
