--- a/8 列表渲染/指令6(v-for).html
+++ b/8 列表渲染/指令6(v-for).html
@@ -26,7 +26,7 @@
 
         <!--用 v-for 通过一个对象的属性来迭代-->
         <ul id="ul_23" >
-            注意：对象遍历默认显示的是键值
+            注意：对象遍历默认显示的是value值，而非键
             <li v-for="value in object">
                 {{ value }}
             </li>
