--- a/3 生命周期/模板和outer HTML优先级2.html
+++ b/3 生命周期/模板和outer HTML优先级2.html
@@ -19,7 +19,7 @@
         },
 		
         render: function(createElement) {
-            return createElement('span', 'this is createElement')
+            return createElement('span', 'this is render createElement')
         }
     })
    /* render函数选项 > template选项 > outer HTML.*/
