--- a/3 生命周期/生命周期1.html
+++ b/3 生命周期/生命周期1.html
@@ -35,15 +35,15 @@
             console.log("%c%s", "color:red","el     : " + this.$el); //undefined （注释：$el 还未加载）
             console.log(this.$data); //  {__ob__: Observer} message:(...)  (注释：$data已被初始化)
             console.log("%c%s", "color:red","message: " + this.message); //  message: haha is boy （注释：$data已被初始化）
-			console.log("%c%s", "color:red","methods: " + this.show);// function () { [native code] }
+			console.log("%c%s", "color:red","methods: " + this.show);// function () { [native code] } （注释：methods 已被初始化）
         },
         beforeMount: function () {
             console.group('beforeMount 挂载前状态===============》');
             console.log("%c%s", "color:red","el     : " + (this.$el)); // el：[object HTMLDivElement]  （注释:已被初始化）
-            console.log(this.$el); //   <div id="app"><p>{{ message }}</p> </div>    (注释:此时绑定的数据为加载)
+            console.log(this.$el); //   <div id="app"><p>{{ message }}</p> </div>    (注释:此时绑定的数据未加载)
             console.log("%c%s", "color:red","data   : " + this.$data); //  (注释：$data已被初始化）
             console.log("%c%s", "color:red","message: " + this.message); // (注释：message已被初始化）
-			console.log("%c%s", "color:red","methods: " + this.show);// function () { [native code] }
+			console.log("%c%s", "color:red","methods: " + this.show);// function () { [native code] }  （注释：methods 已被初始化）
         },
         mounted: function () {
             console.group('mounted 挂载结束状态===============》');
@@ -51,7 +51,7 @@
             console.log(this.$el);  //   <div id="app"><p>haha is boy </p> </div>
             console.log("%c%s", "color:red","data   : " + this.$data); //已被初始化
             console.log("%c%s", "color:red","message: " + this.message); //已被初始化
-			console.log("%c%s", "color:red","methods: " + this.show);// function () { [native code] }
+			console.log("%c%s", "color:red","methods: " + this.show);// function () { [native code] }    //已被初始化
         },
         beforeUpdate: function () {
             console.group('beforeUpdate 更新前状态===============》');
