--- a/10 表单绑定/双向绑定(v-model)-单选按钮4.html
+++ b/10 表单绑定/双向绑定(v-model)-单选按钮4.html
@@ -8,7 +8,7 @@
 <body>
 
     <div id="app">
-        一组 单选框采用相同 的v-model 名称，则即使它们没有相同的name，也被认为是一组（只能选中一个）
+        一组 单选框采用相同 的v-model 名称，则即使它们没有相同的name，也被认为是一组（只能选中一个） <br>
         <input type="radio" value="One" id="one" v-model="picked"  >
         <label for="one">One</label>
         <br>
