--- a/组件12/访问dom2.html
+++ b/组件12/访问dom2.html
@@ -32,7 +32,7 @@
     });
 
    
-    // 错误的写法   错误的写法  
+    // 错误的写法   错误的写法  注意this
     Vue.component("row2",{
         data: function(){
             return {
